--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,27 @@ button {
   outline: none;
 }
 
+body {
+  --sb-track-color: #63375c;
+  --sb-thumb-color: #ff83dd;
+  --sb-size: 10px;
+
+  scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+}
+
+body::-webkit-scrollbar {
+  width: var(--sb-size);
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 10px;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     color: #f6f6f6;
