--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@ a:hover {
   color: #535bf2;
 }
 
+select,
 input,
 button {
   border-radius: 8px;
@@ -38,6 +39,7 @@ button:active {
   background-color: #e8e8e8;
 }
 
+select,
 input,
 button {
   outline: none;
@@ -74,6 +76,7 @@ body::-webkit-scrollbar-thumb {
     color: #24c8db;
   }
 
+  select,
   input,
   button {
     color: #ffffff;
